Update application properties for MS SQL configuration and enhance AuthServiceImpl to handle missing roles